nickpale/static/nickpale/master.css
html, body {
  height: 100%;
  font-size: 16px;
  margin: 0;
}
/*for older browsers (gte IE9)*/
header, section, footer, aside, nav, main, article, figure {
  display: block;
}
/**/
a {
  text-decoration: none;
  color: black;
}
h1 {
  margin: 0;
}

.back {
  padding: 1em;
}

.back-right {
  padding: 1em;
  position: absolute;
  right: 0;
}


.home {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.home h1 {
  font-size: 5em;
  padding-left: 20%;
}
.home ul {
  padding: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}
.home li {
  font-size: 4em;
}


.loop {
  height: 90%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
.loop figure {
  height: 80%;
  text-align: center;
}
.loop figure video {
  max-height: 100%;
  max-width: 100%;
}
.loop .loop-nav {
  width: 75%;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  text-align: center;
}
.loop .loop-nav a {
  width: 50%;
}
.loop .loop-nav .first-loop {
  grid-column-start: 1;
  grid-column-end: 2;
}
.loop .loop-nav .previous-loop {
  grid-column-start: 2;
  grid-column-end: 3;
}
.loop .loop-nav .next-loop {
  grid-column-start: 3;
  grid-column-end: 4;
}
.loop .loop-nav .latest-loop {
  grid-column-start: 4;
  grid-column-end: 5;
}

.loops {
  height: 90%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.loops ul {
  height: 80%;
  padding: 0;
  list-style: none;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-end;
  justify-content: flex-end;
}
.loops li {
  margin: 2%;
  text-align: center;
}


.outfits a:hover {
  outline: dashed black 1px;
}
.outfits ul {
  list-style: none;
}
.outfits img {
  max-width: 100%;
  max-height: 70%;
}
.outfits section {
  width: 40%;
  padding: 0 2%;
}

.outfit, .album {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
}
.outfit ul, .album ul {
  max-width: 40%;
  width: 40%;
  padding-right: 10%;
}
.outfit li, .album li {
  width: 100%;
}
.outfit audio, .album audio {
  width: 100%;
}

.track {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.track audio {
  width: 90%;
}

.answer {
  height: 100%;
  max-width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  padding: 0 3%;
}
.answer img {
  max-width: 100%;
}

.questions {
  height: 100%;
  padding: 0 5%;
}
.questions form {
  padding: 2% 0;
  display: flex;
  flex-direction: column;
}
.questions textarea {
  height: 5em;
}
.questions input {
  align-self: flex-end;
}
.questions ul {
  display: flex;
  flex-direction: column-reverse;
  list-style: none;
  padding: 2% 0;
}
.questions li {
  font-size: 0.75em;
  margin: 1em 0;
}
.questions a {
  text-decoration: underline;
  font-size: 2em;
}


.social h1 {
  padding: 2% 0 10% 10%;
}
.social ul {
  list-style: none;
  padding: 0;
  text-align: right;
}
.email {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}


.thought {
  padding: 0 2%;
}

.thoughts {
  height: 100%;
  padding: 0 2%;
}
.thoughts a {
  text-decoration: underline;
}
.thoughts ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}
.thoughts li {
  margin: 1em 0;
}


.who {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  background: black;
  color: white;
}
.who nav {
  text-align: right;
  margin: 20%;
}
.who a {
  color: white;
}

